--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ AlgorithmPractice/.vscode/settings.json
 MobileProgramming/.idea/codeStyles/Project.xml
 MobileProgramming/.idea/modules.xml
 MobileProgramming/.idea/vcs.xml
+test
