--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,10 @@ lint/tmp/
 
 # Android Profiling
 *.hprof
+MobileProgramming/Week_3/.idea/codeStyles/Project.xml
+MobileProgramming/Week_3/.idea/encodings.xml
+MobileProgramming/Week_3/.idea/gradle.xml
+MobileProgramming/Week_3/.idea/misc.xml
+MobileProgramming/Week_3/.idea/.name
+MobileProgramming/Week_3/.idea/modules.xml
+.vscode/settings.json
